--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
-    <link href="/src/styles.css" rel="stylesheet">
-    <script defer src="/src/main.js"></script>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg">
+    <script type="module" src="/src/main.js"></script>
   </head>
   <body class="bg-dark-900 text-white font-inter min-h-screen flex flex-col">
     <!-- Header -->
