adding chat with pavel

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <button class="mt-4 px-8 py-3 rounded-full bg-gradient-to-r from-sky-500 to-indigo-600 text-lg font-semibold shadow-soft opacity-90 hover:opacity-100 hover:scale-105 transition-transform duration-200 cursor-not-allowed" disabled>
         Explore Projects (Coming Soon)
       </button>
+      <a href="/chat-with-pavel.html" target="_blank" rel="noopener" class="mt-4 px-8 py-3 rounded-full bg-gradient-to-r from-emerald-500 to-sky-600 text-lg font-semibold shadow-soft opacity-90 hover:opacity-100 hover:scale-105 transition-transform duration-200 focus:outline-none focus:ring-2 focus:ring-emerald-400 focus:ring-offset-2">
+        Chat with Pavel
+      </a>
     </section>
 
     <!-- Features Section -->
