shipping project links

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <section class="relative flex flex-col items-center justify-center flex-1 px-6 pt-6 pb-12 fade-in transition-all opacity-0 translate-y-8">
       <div class="absolute inset-0 -z-10 bg-gradient-to-tr from-indigo-700 via-sky-400/40 to-indigo-900 animate-gradient bg-animated-gradient rounded-3xl blur-2xl opacity-60"></div>
       <h2 class="text-4xl md:text-5xl font-bold font-grotesk mb-4 text-center drop-shadow-soft">Code with Flow. Ship with Vibe.</h2>
-      <button class="mt-4 px-8 py-3 rounded-full bg-gradient-to-r from-sky-500 to-indigo-600 text-lg font-semibold shadow-soft opacity-90 hover:opacity-100 hover:scale-105 transition-transform duration-200 cursor-not-allowed" disabled>
-        Explore Projects (Coming Soon)
-      </button>
+      <a href="/projects.html" class="mt-4 px-8 py-3 rounded-full bg-gradient-to-r from-sky-500 to-indigo-600 text-lg font-semibold shadow-soft opacity-90 hover:opacity-100 hover:scale-105 transition-transform duration-200 focus:outline-none focus:ring-2 focus:ring-sky-400 focus:ring-offset-2 text-center block">
+        Explore Projects
+      </a>
       <a href="/chat-with-pavel.html" target="_blank" rel="noopener" class="mt-4 px-8 py-3 rounded-full bg-gradient-to-r from-emerald-500 to-sky-600 text-lg font-semibold shadow-soft opacity-90 hover:opacity-100 hover:scale-105 transition-transform duration-200 focus:outline-none focus:ring-2 focus:ring-emerald-400 focus:ring-offset-2">
         Chat with Pavel
       </a>
