--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>builtwithvibe.com – Code with Flow. Ship with Vibe.</title>
+    <meta property="og:title" content="Built with Vibe" />
+    <meta property="og:description" content="Explore projects created using the Vibe Coding approach." />
+    <meta property="og:image" content="https://builtwithvibe.com/logo-preview.png" />
+    <meta property="og:url" content="https://builtwithvibe.com/projects" />
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
